--- a/Grapher.WPF/Grapher.WPF.csproj
+++ b/Grapher.WPF/Grapher.WPF.csproj
@@ -5,11 +5,13 @@
     <TargetFramework>net8.0-windows</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <UseWPF>true</UseWPF>
+	<UseWPF>true</UseWPF>
+	<UserSecretsId>403a1bf5-7aea-4ed6-8882-ed0d84778255</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
   </ItemGroup>
 
