--- a/Grapher.WPF/Grapher.WPF.csproj
+++ b/Grapher.WPF/Grapher.WPF.csproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Page Remove="MainStyle.xaml" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
@@ -19,6 +23,10 @@
     <ProjectReference Include="..\Grapher.Base\Grapher.Base.csproj" />
     <ProjectReference Include="..\Grapher.Domain\Grapher.Domain.csproj" />
     <ProjectReference Include="..\Grapher.Services\Grapher.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Resource Include="MainStyle.xaml" />
   </ItemGroup>
 
 </Project>
