Get basic DI working between navigation

--- a/Grapher.WPF/Grapher.WPF.csproj
+++ b/Grapher.WPF/Grapher.WPF.csproj
@@ -29,4 +29,10 @@
     <Resource Include="MainStyle.xaml" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="MainWindowNavigation.cs">
+      <Generator>MSBuild:Compile</Generator>
+    </Compile>
+  </ItemGroup>
+
 </Project>
